refactored projects pages and added banners

--- a/project_SWARMS.html
+++ b/project_SWARMS.html
@@ -31,7 +31,7 @@
 
 <body>
 
-    <!-- Navigation Bar -->
+    <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -51,13 +51,13 @@
                         <a href="#">Research Topics</a>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Research Projects <b class="caret"></b></a>
+                        <a href="projects_all.html" class="dropdown-toggle" data-toggle="dropdown">Research Projects <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="swarms.html">SWARMS Project</a>
+                                <a href="project_swarms.html">SWARMS Project</a>
                             </li>
                             <li>
-                                <a href="archives.html">ARCHIVES Project</a>
+                                <a href="project_archives.html">ARCHIVES Project</a>
                             </li>
                         </ul>
                     </li>
@@ -95,13 +95,13 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">ARCHIVES project
-                    <small>Analysis and Reconstruction of Catastrophes in History within Interactive Virtual Environments and Simulations</small>
+                <h1 class="page-header">SWARMS project
+                    <small>Say and Watch: Automated image/sound Recognition for Mobile monitoring Systems</small>
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
                     </li>
-                    <li class="active">ARCHIVES</li>
+                    <li class="active">SWAMRS</li>
                 </ol>
             </div>
         </div>
@@ -122,7 +122,7 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img class="img-responsive" src="/img_archives_project/img_archives.png" alt="">
+                            <img class="img-responsive" src="/img_swarms_project/img_swarms.jpg" alt="">
                         </div>
                     </div>
 
@@ -138,21 +138,19 @@
 
             <div class="col-md-4">
                 <h3>Project Description</h3>
-                <p>The goal of ARCHIVES is to support historical researches on past natural disasters with the help of advanced document image analysis, knowledge management, GIS representation and agent-based computer modeling. The idea is that, a better understanding of past events, of their impacts on the communities as well as of adaptation measures undertaken could help to improve the management and prediction of the natural hazards. The case study considered is the Red River floods and their impacts on Hanoi over the past centuries. The project is built upon the achievement of three complementary goals, which correspond to research issues, each of them involving 4 or more partners.</p>
+                <p>The objective of this project is to obtain a flexible and real-time monitoring network, which could supplement possibly existing (fixed) networks, and could then feed a decision-support system (through models and simulations of evolution scenarios) or support an advanced visualization of the phenomenon to monitor.</p>
+                <p>The main idea is to study in a real context the feasibility of a smartphone-based monitoring network, where the devices are not only used as passive sensors but can also be actively used by their owners to transmit visual, voice and textual pieces of information to the monitoring system, in order to enable stakeholders to analyze and forecast information.</p>
                 <h3>Project Investigator</h3>
-                <p>Alexis DROGOUL(<a href="#ref_1">1</a>, <a href="#ref_2">2</a>)</p>
+                <p>Muriel Visani(<a href="#ref_1">1</a>, <a href="#ref_2">2</a>)</p>
                 <h3>Partners</h3>
                 <ol>
-                    <li id="ref_1"><a href="http://www.vietnam.ird.fr/l-ird-au-vietnam/presentation">UMMISCO, Institut de Recherche pour le Développement</a></li>
-                    <li><a href="http://l3i.univ-larochelle.fr/">L3I, University of La Rochelle</a>, France</li>
-                    <li id="ref_2"><a href="http://ictlab.usth.edu.vn/">ICTLab, University of Science and Technology of Hanoi</a>, Vietnam</li>
-                    <li><a href="https://www.irit.fr/?lang=en">IRIT, University of Toulouse</a>, France</li>
+                    <li id="ref_1">Vietnam-France ICT Lab, USTH, Hanoï</li>
+                    <li id="ref_2"><a href="http://l3i.univ-larochelle.fr/">L3i, University of La Rochelle</a>, France</li>
+                    <li><a href="http://www.vietnam.ird.fr/l-ird-au-vietnam/presentation">UMMISCO, Institut de Recherche pour le Développement</a>, France</li>
                     <li><a href="http://www.vast.ac.vn/en/">IOIT, Vietnamese Academy of Science and Technology</a>, Hanoï</li>
-                    <li><a href="https://vnsc.org.vn/en/">VNSC, Vietnamese Academy of Science and Technology</a>, Vietnam</li>
-                    <li><a href="http://hus.vnu.edu.vn/en">VNU-HUS, Vietnam National University</a>, Vietnam</li>
-                    <li><a href="https://vnu.edu.vn/eng/?C2249/N12736/VNU-International-Center-for-Advanced-Research-on-Global-Change.htm">VNU-ICARGC</a>, Vietnam National University, Vietnam</li>
-                    <li><a href="https://www.archives.gov/">National Archives, Vietnam</a></li>
-                    <li><a href="http://www.efeo.fr/index.php?l=EN">EFEO, Vietnam</a></li>
+                    <li><a href="http://xlim-sic.labo.univ-poitiers.fr/">XLIM</a>, Poitiers, France</li>
+                    <li><a href="http://www.cuscsoft.com/index.php?outsource/EN">Can Tho University Software Center</a>, Vietnam</li>
+                    <li><a href="https://www.labri.fr/">LaBRI</a>, University of Bordeaux, France</li>
                 </ol>
             </div>
 
@@ -167,8 +165,8 @@
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="swarms.html">
-                    <img class="img-responsive img-hover img-related" src="img_swarms_project/img_swarms_thumb.jpg" alt="">
+                <a href="archives.html">
+                    <img class="img-responsive img-hover img-related" src="img_archives_project/img_archives_thumb.png" alt="">
                 </a>
             </div>
 
