--- a/services.html
+++ b/services.html
@@ -123,13 +123,12 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Services
-                    <small>Subheading</small>
+                <h1 class="page-header">Research Topics
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
                     </li>
-                    <li class="active">Services</li>
+                    <li class="active">Research Topics</li>
                 </ol>
             </div>
         </div>
@@ -138,7 +137,34 @@
         <!-- Image Header -->
         <div class="row">
             <div class="col-lg-12">
-                <img class="img-responsive" src="http://placehold.it/1200x300" alt="">
+                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                    </ol>
+
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" style="height: 450px; vertical-align: center;">
+                        <div class="item active">
+                            <img class="img-responsive" src="img/banner-2.jpg" alt="" style="margin: auto;">
+                        </div>
+                        <div class="item">
+                            <img class="img-responsive" src="img/banner-4.jpg" alt="" style="display: block; margin: auto;">
+                        </div>
+                        <div class="item">
+                            <img class="img-responsive" src="img/banner-3.jpg" alt="" style="display: block; margin: auto;">
+                        </div>
+                    </div>
+
+                    <!-- Controls -->
+                    <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                    </a>
+                    <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                    </a>
             </div>
         </div>
         <!-- /.row -->
@@ -214,7 +240,7 @@
         <!-- Service Tabs -->
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Service Tabs</h2>
+                <h2 class="page-header">Application </h2>
             </div>
             <div class="col-lg-12">
 
