--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         </div>
         <!-- /.row -->
 
-        <!-- Portfolio Section -->
+        <!-- News Section -->
         <div class="row">
             <div class="col-lg-12">
                 <h2 class="page-header">News</h2>
@@ -207,64 +207,55 @@
         </div>
         <!-- /.row -->
 
-        <!-- Features Section -->
+        <!-- Contact Section -->
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Modern Business Features</h2>
+                <h2 class="page-header">Contact us</h2>
             </div>
             <div class="col-md-6">
-                <p>The Modern Business template by Start Bootstrap includes:</p>
-                <ul>
-                    <li><strong>Bootstrap v3.3.7</strong>
-                    </li>
-                    <li>jQuery v1.11.1</li>
-                    <li>Font Awesome v4.2.0</li>
-                    <li>Working PHP contact form with validation</li>
-                    <li>Unstyled page elements for easy customization</li>
-                    <li>17 HTML pages</li>
-                </ul>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id reprehenderit, quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia dolorum ducimus unde.</p>
+                <p>For any details information, business inquiries, contact us at:</p>
+                <p style="margin-left:20px;">
+                    USTH ICTLAB Research Laboratory<br>
+                    5th Floor, Education and Services Building<br>
+                    18 Hoang Quoc Viet, CauGiay, Hanoi<br>
+                </p>
+
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
+                    <a class="btn btn-lg btn-default btn-block" href="contact.html">Send us a message</a>
+                </div>
             </div>
             <div class="col-md-6">
-                <img class="img-responsive" src="http://placehold.it/700x450" alt="">
+                <img class="img-responsive" style="width:100%;" src="./img_home/ictlabLogo.png" alt="ictLabLogo">
             </div>
         </div>
         <!-- /.row -->
 
         <hr>
 
-        <!-- Call to Action Section -->
-        <div class="row">
-            <div class="col-md-4">
-                <a class="btn btn-lg btn-default btn-block" href="contact.html">Contact us!</a>
-            </div>
-        </div>
-
-        <hr>
-
-        <!-- Our Customers -->
+        <!-- Our Partners -->
         <div class="row">
             <div class="col-lg-12">
                 <h2 class="page-header">Our Partners</h2>
             </div>
             <div class="col-md-2 col-sm-4 col-xs-6">
                 <a href="http://www.usth.edu.vn">
-                    <img class="img-responsive customer-img" src="./img_home/partner1.png" alt="USTH">
+                    <img class="img-responsive customer-img img-hover" src="./img_home/partner1.png" alt="USTH">
                 </a>
             </div>
             <div class="col-md-2 col-sm-4 col-xs-6">
                 <a href="http://www.ioit.ac.vn">
-                    <img class="img-responsive customer-img" src="./img_home/partner2.jpg" alt="IOIT">
+                    <img class="img-responsive customer-img img-hover" src="./img_home/partner2.jpg" alt="IOIT">
                 </a>
             </div>
             <div class="col-md-2 col-sm-4 col-xs-6">
                 <a href="http://en.vietnam.ird.fr/">
-                    <img class="img-responsive customer-img" src="./img_home/partner3.png" alt="IRD">
+                    <img class="img-responsive customer-img img-hover" src="./img_home/partner3.png" alt="IRD">
                 </a>
             </div>
             <div class="col-md-2 col-sm-4 col-xs-6">
                 <a href="http://www.univ-larochelle.fr/">
-                    <img class="img-responsive customer-img" src="./img_home/partner4.jpg" alt="LaRochelle">
+                    <img class="img-responsive customer-img img-hover" src="./img_home/partner4.jpg" alt="LaRochelle">
                 </a>
             </div>
         </div>
