Move homepage brand style to CSS, add homepage footer class

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>ICT Lab</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/modern-business.css" rel="stylesheet">
@@ -43,7 +43,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" style="font-family:'Monoton',cursive;font-size:30px;" href="index.html"><strong>ICT</strong>Lab</a>
+                <a class="navbar-brand" href="index.html"><strong>ICT</strong>Lab</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -232,8 +232,6 @@
         </div>
         <!-- /.row -->
 
-        <hr>
-
         <!-- Our Partners -->
         <div class="row">
             <div class="col-lg-12">
@@ -263,7 +261,7 @@
         <!-- /.row -->
 
         <!-- Footer -->
-        <footer>
+        <footer class="modal-footer">
             <div class="row">
                 <div class="col-lg-12">
                     <p>Copyright &copy; ICTLab</p>
