--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                             <li>
                                 <a href="project_archives.html">ARCHIVES Project</a>
                             </li>
+                            <li>
+                                <a href="project_all.html">All Projects</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="dropdown">
