--- a/member.html
+++ b/member.html
@@ -65,7 +65,7 @@
                                 <a href="news.html">News</a>
                             </li>
                             <li>
-                                <a href="portfolio-3-col.html">Events</a>
+                                <a href="event.html">Events</a>
                             </li>
                         </ul>
                     </li>
