--- a/project_SWARMS.html
+++ b/project_SWARMS.html
@@ -59,6 +59,9 @@
                             <li>
                                 <a href="project_archives.html">ARCHIVES Project</a>
                             </li>
+                            <li>
+                                <a href="project_all.html">All Projects</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -68,7 +71,7 @@
                                 <a href="news.html">News</a>
                             </li>
                             <li>
-                                <a href="portfolio-3-col.html">Events</a>
+                                <a href="event.html">Events</a>
                             </li>
                         </ul>
                     </li>
