--- a/project_all.html
+++ b/project_all.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>ICTLab</title>
+    <title>Modern Business - Start Bootstrap Template</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -31,7 +31,7 @@
 
 <body>
 
-    <!-- Navigation Bar -->
+    <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -90,7 +90,6 @@
         </div>
         <!-- /.container -->
     </nav>
-    
 
     <!-- Page Content -->
     <div class="container">
@@ -98,83 +97,48 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">ARCHIVES project
-                    <small>Analysis and Reconstruction of Catastrophes in History within Interactive Virtual Environments and Simulations</small>
+                <h1 class="page-header">All projects
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
                     </li>
-                    <li class="active">ARCHIVES</li>
+                    <li class="active">All Projects</li>
                 </ol>
             </div>
         </div>
         <!-- /.row -->
 
-        <!-- Portfolio Item Row -->
+        <!-- Project One -->
         <div class="row">
-
-            <div class="col-md-8">
-                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                    <!-- Indicators -->
-                    <ol class="carousel-indicators">
-                        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                    </ol>
-
-                    <!-- Wrapper for slides -->
-                    <div class="carousel-inner">
-                        <div class="item active">
-                            <img class="img-responsive" src="/img_archives_project/img_archives.png" alt="">
-                        </div>
-                    </div>
-
-                    <!-- Controls -->
-                    <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                        <span class="glyphicon glyphicon-chevron-left"></span>
-                    </a>
-                    <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                        <span class="glyphicon glyphicon-chevron-right"></span>
-                    </a>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <h3>Project Description</h3>
-                <p>The goal of ARCHIVES is to support historical researches on past natural disasters with the help of advanced document image analysis, knowledge management, GIS representation and agent-based computer modeling. The idea is that, a better understanding of past events, of their impacts on the communities as well as of adaptation measures undertaken could help to improve the management and prediction of the natural hazards. The case study considered is the Red River floods and their impacts on Hanoi over the past centuries. The project is built upon the achievement of three complementary goals, which correspond to research issues, each of them involving 4 or more partners.</p>
-                <h3>Project Investigator</h3>
-                <p>Alexis DROGOUL(<a href="#ref_1">1</a>, <a href="#ref_2">2</a>)</p>
-                <h3>Partners</h3>
-                <ol>
-                    <li id="ref_1"><a href="http://www.vietnam.ird.fr/l-ird-au-vietnam/presentation">UMMISCO, Institut de Recherche pour le Développement</a></li>
-                    <li><a href="http://l3i.univ-larochelle.fr/">L3I, University of La Rochelle</a>, France</li>
-                    <li id="ref_2"><a href="http://ictlab.usth.edu.vn/">ICTLab, University of Science and Technology of Hanoi</a>, Vietnam</li>
-                    <li><a href="https://www.irit.fr/?lang=en">IRIT, University of Toulouse</a>, France</li>
-                    <li><a href="http://www.vast.ac.vn/en/">IOIT, Vietnamese Academy of Science and Technology</a>, Hanoï</li>
-                    <li><a href="https://vnsc.org.vn/en/">VNSC, Vietnamese Academy of Science and Technology</a>, Vietnam</li>
-                    <li><a href="http://hus.vnu.edu.vn/en">VNU-HUS, Vietnam National University</a>, Vietnam</li>
-                    <li><a href="https://vnu.edu.vn/eng/?C2249/N12736/VNU-International-Center-for-Advanced-Research-on-Global-Change.htm">VNU-ICARGC</a>, Vietnam National University, Vietnam</li>
-                    <li><a href="https://www.archives.gov/">National Archives, Vietnam</a></li>
-                    <li><a href="http://www.efeo.fr/index.php?l=EN">EFEO, Vietnam</a></li>
-                </ol>
-            </div>
-
-        </div>
-        <!-- /.row -->
-
-        <!-- Related Projects Row -->
-        <div class="row">
-
-            <div class="col-lg-12">
-                <h3 class="page-header">Related Projects</h3>
-            </div>
-
-            <div class="col-sm-3 col-xs-6">
-                <a href="swarms.html">
-                    <img class="img-responsive img-hover img-related" src="img_swarms_project/img_swarms_thumb.jpg" alt="">
+            <div class="col-md-7">
+                <a href="project_swarms.html">
+                    <img class="img-responsive img-hover" src="img_swarms_project/img_swarms_thumb.jpg" alt="">
                 </a>
             </div>
+            <div class="col-md-5">
+                <h3>SWARMS</h3>
+                <h4>Say and Watch: Automated image/sound Recognition for Mobile monitoring Systems</h4>
+                <p>Obtaining a flexible and real-time monitoring network, which could supplement possibly existing (fixed) networks, and could then feed a decision-support system (through models and simulations of evolution scenarios) or support an advanced visualization of the phenomenon to monitor.</p>
+                <a class="btn btn-primary" href="project_swarms.html">Detail</i></a>
+            </div>
+        </div>
+        <!-- /.row -->
 
+        <hr>
+
+        <!-- Project Two -->
+        <div class="row">
+            <div class="col-md-7">
+                <a href="project_archives.html">
+                    <img class="img-responsive img-hover" src="img_archives_project/img_archives_thumb.png" alt="">
+                </a>
+            </div>
+            <div class="col-md-5">
+                <h3>ARCHIVES</h3>
+                <h4>Analysis and Reconstruction of Catastrophes in History within Interactive Virtual Environments and Simulations</h4>
+                <p>Supporting historical researches on past natural disasters with the help of advanced document image analysis, knowledge management, GIS representation and agent-based computer modeling. </p>
+                <a class="btn btn-primary" href="project_archives.html">Detail</i></a>
+            </div>
         </div>
         <!-- /.row -->
 
