--- a/project_SWARMS.html
+++ b/project_SWARMS.html
@@ -48,7 +48,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#">Research Topics</a>
+                        <a href="research_topic.html">Research Topics</a>
                     </li>
                     <li class="dropdown">
                         <a href="projects_all.html" class="dropdown-toggle" data-toggle="dropdown">Research Projects <b class="caret"></b></a>
