--- a/event.html
+++ b/event.html
@@ -102,7 +102,7 @@
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
                     </li>
-                    <li class="active"> <a href="event.html">ICT Lab Seminar</a></li>
+                    <li class="active"> ICT Lab Seminar</li>
                 </ol>
             </div>
         </div>
