--- a/member.html
+++ b/member.html
@@ -51,10 +51,13 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Research Projects <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="#">SWARMS Project</a>
+                                <a href="project_swarms.html">SWARMS Project</a>
                             </li>
                             <li>
-                                <a href="#">ARCHIVES Project</a>
+                                <a href="project_archives.html">ARCHIVES Project</a>
+                            </li>
+                            <li>
+                                <a href="project_all.html">All Projects</a>
                             </li>
                         </ul>
                     </li>
