--- a/news.html
+++ b/news.html
@@ -55,10 +55,10 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Research Projects <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="#">SWARMS Project</a>
+                                <a href="project_swarms.html">SWARMS Project</a>
                             </li>
                             <li>
-                                <a href="#">ARCHIVES Project</a>
+                                <a href="project_archives.html">ARCHIVES Project</a>
                             </li>
                             <li>
                                 <a href="project_all.html">All Projects</a>
@@ -102,7 +102,7 @@
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
                     </li>
-                    <li class="active">Two Column Portfolio</li>
+                    <li class="active">News</li>
                 </ol>
             </div>
         </div>
