--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -134,9 +134,9 @@
                 </h1>
             </div>
             <div class="col-md-4">
-                <div class="panel panel-default">
+                <div class="panel panel-primary">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-compass"></i> Who we are?</h4>
+                        <h4 style="color:#fff;"><i class="fa fa-fw fa-compass"></i> Who we are?</h4>
                     </div>
                     <div class="panel-body">
                         <p>ICTLab is a joint international ICT research laboratory between USTH and Vietnamese and French partners.</p>
@@ -146,21 +146,21 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="panel panel-default">
+                <div class="panel panel-primary">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-bar-chart"></i> Our Researches</h4>
+                        <h4 style="color:#fff;"><i class="fa fa-fw fa-bar-chart"></i> Our Researches</h4>
                     </div>
                     <div class="panel-body">
                         <p>Together with most of our partners, we are working on the two following projects: ARCHIVES, and SWARMS.</p>
                         <div class="col-md-4"></div>
-                        <a href="#" class="col-md-4 btn btn-default">Learn More</a>
+                        <a href="project_all.html" class="col-md-4 btn btn-default">Learn More</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="panel panel-default">
+                <div class="panel panel-primary">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-calendar"></i> Monthly Seminars</h4>
+                        <h4 style="color:#fff;"><i class="fa fa-fw fa-calendar"></i> Monthly Seminars</h4>
                     </div>
                     <div class="panel-body">
                         <p>We hold monthly seminar in our place. We will talk about many different topics related to our researches.</p>
@@ -224,7 +224,7 @@
                     18 Hoang Quoc Viet, CauGiay, Hanoi<br>
                 </p>
                 <div class="col-md-8">
-                    <a class="btn btn-lg btn-default btn-block" href="contact.html">Send us a message</a>
+                    <a class="btn btn-lg btn-primary btn-block" href="contact.html">Send us a message</a>
                 </div>
             </div>
             <div class="col-md-6">
@@ -265,6 +265,7 @@
         <footer class="modal-footer">
             <div class="row">
                 <div class="col-lg-12">
+                    <hr>
                     <p>Copyright &copy; ICTLab</p>
                 </div>
             </div>
