Reformat Research Topic page

--- a/research_topic.html
+++ b/research_topic.html
@@ -9,16 +9,17 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Modern Business - Start Bootstrap Template</title>
+    <title>Research Topics | ICT Lab</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/modern-business.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -33,63 +34,63 @@
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="index.html"><strong>ICT</strong>Lab</a>
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="index.html"><strong>ICT</strong>Lab</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="active">
+                        <a href="research_topic.html">Research Topics</a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Research Projects <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="project_swarms.html">SWARMS Project</a>
+                            </li>
+                            <li>
+                                <a href="project_archives.html">ARCHIVES Project</a>
+                            </li>
+                            <li>
+                                <a href="project_all.html">All Projects</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">News and Events <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="news.html">News</a>
+                            </li>
+                            <li>
+                                <a href="event.html">Events</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="member.html">Members</a>
+                    </li>
+                    <li>
+                        <a href="about.html">About</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
         </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <a href="research_topic.html">Research Topics</a>
-                </li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Research Projects <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li>
-                            <a href="project_swarms.html">SWARMS Project</a>
-                        </li>
-                        <li>
-                            <a href="project_archives.html">ARCHIVES Project</a>
-                        </li>
-                        <li>
-                            <a href="project_all.html">All Projects</a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">News and Events <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li>
-                            <a href="news.html">News</a>
-                        </li>
-                        <li>
-                            <a href="event.html">Events</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="member.html">Members</a>
-                </li>
-                <li>
-                    <a href="about.html">About</a>
-                </li>
-                <li>
-                    <a href="contact.html">Contact</a>
-                </li>
-            </ul>
-        </div>
-        <!-- /.navbar-collapse -->
-    </div>
-    <!-- /.container -->
-</nav>
+        <!-- /.container -->
+    </nav>
 
     <!-- Page Content -->
     <div class="container">
@@ -111,7 +112,6 @@
         <!-- Content Row -->
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Research Topics</h2>
                 <p>The interactions between the applicative axes and the scientific axes of this program are presented in the figure.</p>
             </div>
                 
@@ -123,9 +123,9 @@
         <div class="row">
             <div class="col-lg-12">
                 <ul id="myTab" class="nav nav-tabs nav-justified">
-                    <li class="active"><a href="#application-axes" data-toggle="tab"><i class="fa fa-tree"></i> Applicative Axes</a>
+                    <li class="active"><a href="#application-axes" data-toggle="tab"><i class="fa fa-check"></i> Applicative Axes</a>
                     </li>
-                    <li class=""><a href="#science-axes" data-toggle="tab"><i class="fa fa-car"></i> Scientific Axes</a>
+                    <li class=""><a href="#science-axes" data-toggle="tab"><i class="fa fa-check"></i> Scientific Axes</a>
                     </li>
                 </ul>
                 <hr>
@@ -159,13 +159,12 @@
         </div>
         <!-- /.row -->
 
-        <hr>
-
         <!-- Footer -->
-        <footer>
+        <footer class="modal-footer">
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <hr>
+                    <p>Copyright &copy; ICTLab</p>
                 </div>
             </div>
         </footer>
