--- a/member.html
+++ b/member.html
@@ -9,13 +9,17 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Round About - Start Bootstrap Template</title>
+    <title>Members | ICT Lab</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/round-about.css" rel="stylesheet">
+    <link href="css/modern-business.css" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -39,7 +43,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">ICTLab</a>
+                <a class="navbar-brand" href="index.html"><strong>ICT</strong>Lab</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -72,7 +76,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="active">
                         <a href="member.html">Members</a>
                     </li>
                     <li>
@@ -95,9 +99,7 @@
         <!-- Introduction Row -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">About Us
-                    <small> <i> It's Nice to Meet You! </i> </small>
-                </h1>
+                <h1 class="page-header">Our members</h1>
                 <p></p>
             </div>
         </div>
@@ -113,8 +115,9 @@
                 <h3>Remy Mullot </h3>
                 <p>
                     <i> Professor, University of La Rochelle, France </i>
+                    <br>
+                    Director & Senior Researcher
                 </p>
-                <h3> <small>Director & Senior Researcher </small> </h3>
             </div>
 
             <div class="col-lg-4 col-sm-6 text-center">
@@ -122,8 +125,9 @@
                 <h3>Luong Chi Mai </h3>
                 <p>
                     <i> Associate Professor, IOIT, VAST </i>
+                    <br>
+                    Co-Director & Senior Researcher
                 </p>
-                <h3> <small>Co-Director & Senior Researcher</small> </h3>
             </div>
 
             <div class="col-lg-4 col-sm-6 text-center">
@@ -131,8 +135,9 @@
                 <h3>Alexis Drogoul </h3>
                 <p>
                     <i> Research Director, IRD </i>
+                    <br>
+                    Co-Director & Senior Researcher
                 </p>
-                <h3> <small>Co-Director & Senior Researcher</small> </h3>
             </div>
 
             <div class="col-lg-4 col-sm-6 text-center">
@@ -140,8 +145,9 @@
                 <h3>Ho Tuong Vinh </h3>
                 <p>
                     <i> Research Director, IFI-MSI </i>
+                    <br>
+                    Co-Director & Senior Researcher
                 </p>
-                <h3> <small>Co-Director & Senior Researcher</small> </h3>
             </div>
 
             <div class="col-lg-4 col-sm-6 text-center">
@@ -149,8 +155,9 @@
                 <h3>Jean-Daniel Zucker </h3>
                 <p>
                     <i> Research Director, UMI UMMISCO </i>
+                    <br>
+                    Senior Researcher
                 </p>
-                <h3> <small>Senior Researcher</small> </h3>
             </div>
             
             <div class="col-lg-4 col-sm-6 text-center">
@@ -158,8 +165,9 @@
                 <h3>Muriel Visani</h3>
                 <p>
                     <i> Associate Professor, University of La Rochelle, France </i>
+                    <br>
+                    Senior Researcher
                 </p>
-                <h3> <small>Senior Researcher</small> </h3>
             </div>
 
             <div class="col-lg-12">
@@ -170,9 +178,8 @@
                 <img class="img-circle img-responsive img-center" src="img_member/tu-150x150.jpg" alt="">
                 <h3>Phung Thi Thanh Tu</h3>
                 <p>
-                    <i> </i>
+                    Academic & Research Assistant
                 </p>
-                <h3> <small>Academic & Research Assistant</small> </h3>
             </div>
 
             <div class="col-lg-12">
@@ -185,7 +192,6 @@
                 <p>
                     <i> Ph.D. in Computer Science </i>
                 </p>
-                <h3> <small></small> </h3>
             </div>
 
             <div class="col-lg-4 col-sm-6 text-center">
@@ -194,7 +200,6 @@
                 <p>
                     <i> Ph.D. in Computer Science </i>
                 </p>
-                <h3> <small></small> </h3>
             </div>
 
             <div class="col-lg-4 col-sm-6 text-center">
@@ -203,7 +208,6 @@
                 <p>
                     <i> Ph.D. in Computer Science </i>
                 </p>
-                <h3> <small></small> </h3>
             </div>
 
             <div class="col-lg-4 col-sm-6 text-center">
@@ -212,7 +216,6 @@
                 <p>
                     <i> Ph.D. in Computer Science </i>
                 </p>
-                <h3> <small></small> </h3>
             </div>
 
             <div class="col-lg-4 col-sm-6 text-center">
@@ -221,7 +224,6 @@
                 <p>
                     <i> Ph.D. in Computer Science </i>
                 </p>
-                <h3> <small></small> </h3>
             </div>
 
             <div class="col-lg-12">
@@ -233,8 +235,9 @@
                 <h3>Bruno Lescalier </h3>
                 <p>
                     <i> Senior Researcher, Laboratory L3i, University of La Rochelle, France </i>
+                    <br>
+                    Invited researcher
                 </p>
-                <h3> <small>Invited researcher</small> </h3>
             </div>
 
             <div class="col-lg-4 col-sm-6 text-center">
@@ -242,8 +245,9 @@
                 <h3>Julien Mazars</h3>
                 <p>
                     <i> Senior Researcher, IRD </i>
+                    <br>
+                    Invited researcher
                 </p>
-                <h3> <small>Invited researcher</small> </h3>
             </div>
 
             <div class="col-lg-4 col-sm-6 text-center">
@@ -251,23 +255,21 @@
                 <h3>Ho Bich Hai</h3>
                 <p>
                     <i> Researcher, IOIT </i>
+                    <br>
+                    Invited researcher
                 </p>
-                <h3> <small>Invited researcher</small> </h3>
             </div>
 
         </div>
 
-        <hr>
-
         <!-- Footer -->
-        <footer>
+        <footer class="modal-footer">
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; WebApp 2016</p>
+                    <hr>
+                    <p>Copyright &copy; ICTLab</p>
                 </div>
-                <!-- /.col-lg-12 -->
             </div>
-            <!-- /.row -->
         </footer>
 
     </div>
