--- a/member.html
+++ b/member.html
@@ -96,13 +96,19 @@
     <!-- Page Content -->
     <div class="container">
 
-        <!-- Introduction Row -->
+        <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Our members</h1>
-                <p></p>
+                <h1 class="page-header">Members
+                </h1>
+                <ol class="breadcrumb">
+                    <li><a href="index.html">Home</a>
+                    </li>
+                    <li class="active">Members</li>
+                </ol>
             </div>
         </div>
+        <!-- /.row -->
 
         <!-- Team Members Row -->
         <div class="row">
