Reformat Contact page

--- a/contact.html
+++ b/contact.html
@@ -9,16 +9,17 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Modern Business - Start Bootstrap Template</title>
+    <title>Contact us | ICT Lab</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/modern-business.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -81,7 +82,7 @@
                     <li>
                         <a href="about.html">About</a>
                     </li>
-                    <li>
+                    <li class="active">
                         <a href="contact.html">Contact</a>
                     </li>
                 </ul>
@@ -129,7 +130,7 @@
                     <abbr title="Phone">P</abbr>: (123) 456-7890</p> -->
                 <p> <b>Assistant:</b> Ms Phung Thi Thanh Tu </p>    
                 <p><i class="fa fa-envelope-o"></i> 
-                    <abbr title="Email">E</abbr>: <a href="mailto:phung-thi-thanh.tu@usth.edu.vn">phung-thi-thanh.tu@usth.edu.vn</a>
+                    Email: <a href="mailto:phung-thi-thanh.tu@usth.edu.vn">phung-thi-thanh.tu@usth.edu.vn</a>
                 </p>
                 <!-- <p><i class="fa fa-clock-o"></i> 
                     <abbr title="Hours">H</abbr>: Monday - Friday: 9:00 AM to 5:00 PM</p> -->
@@ -191,13 +192,12 @@
         </div>
         <!-- /.row -->
 
-        <hr>
-
         <!-- Footer -->
-        <footer>
+        <footer class="modal-footer">
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; WebApp 2016</p>
+                    <hr>
+                    <p>Copyright &copy; ICTLab</p>
                 </div>
             </div>
         </footer>
