--- a/project_SWARMS.html
+++ b/project_SWARMS.html
@@ -9,16 +9,17 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>ICTLab</title>
+    <title>SWARMS | ICT Lab</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/modern-business.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -42,7 +43,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">ICTLab</a>
+                <a class="navbar-brand" href="index.html"><strong>ICT</strong>Lab</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -51,9 +52,9 @@
                         <a href="research_topic.html">Research Topics</a>
                     </li>
                     <li class="dropdown">
-                        <a href="projects_all.html" class="dropdown-toggle" data-toggle="dropdown">Research Projects <b class="caret"></b></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Research Projects <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li>
+                            <li class="active">
                                 <a href="project_swarms.html">SWARMS Project</a>
                             </li>
                             <li>
@@ -98,7 +99,7 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">SWARMS project
+                <h1 class="page-header">SWARMS project <br>
                     <small>Say and Watch: Automated image/sound Recognition for Mobile monitoring Systems</small>
                 </h1>
                 <ol class="breadcrumb">
@@ -114,29 +115,7 @@
         <div class="row">
 
             <div class="col-md-8">
-                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                    <!-- Indicators -->
-                    <ol class="carousel-indicators">
-                        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                    </ol>
-
-                    <!-- Wrapper for slides -->
-                    <div class="carousel-inner">
-                        <div class="item active">
-                            <img class="img-responsive" src="/img_swarms_project/img_swarms.jpg" alt="">
-                        </div>
-                    </div>
-
-                    <!-- Controls -->
-                    <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                        <span class="glyphicon glyphicon-chevron-left"></span>
-                    </a>
-                    <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                        <span class="glyphicon glyphicon-chevron-right"></span>
-                    </a>
-                </div>
+                <img class="img-responsive" src="./img_swarms_project/img_swarms.jpg" alt="">
             </div>
 
             <div class="col-md-4">
@@ -167,22 +146,23 @@
                 <h3 class="page-header">Related Projects</h3>
             </div>
 
-            <div class="col-sm-3 col-xs-6">
+            <div class="col-sm-3 col-xs-6 text-center">
                 <a href="archives.html">
                     <img class="img-responsive img-hover img-related" src="img_archives_project/img_archives_thumb.png" alt="">
+                    <br>
+                    <p>ARCHIVES Project</p>
                 </a>
             </div>
 
         </div>
         <!-- /.row -->
 
-        <hr>
-
         <!-- Footer -->
-        <footer>
+        <footer class="modal-footer">
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <hr>
+                    <p>Copyright &copy; ICTLab</p>
                 </div>
             </div>
         </footer>
