Reformat 3 Projects pages

--- a/project_SWARMS.html
+++ b/project_SWARMS.html
@@ -51,7 +51,7 @@
                     <li>
                         <a href="research_topic.html">Research Topics</a>
                     </li>
-                    <li class="dropdown">
+                    <li class="dropdown active">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Research Projects <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li class="active">
@@ -147,7 +147,7 @@
             </div>
 
             <div class="col-sm-3 col-xs-6 text-center">
-                <a href="archives.html">
+                <a href="project_ARCHIVES.html">
                     <img class="img-responsive img-hover img-related" src="img_archives_project/img_archives_thumb.png" alt="">
                     <br>
                     <p>ARCHIVES Project</p>
