--- a/project_all.html
+++ b/project_all.html
@@ -51,7 +51,7 @@
                     <li>
                         <a href="research_topic.html">Research Topics</a>
                     </li>
-                    <li class="dropdown">
+                    <li class="dropdown active">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Research Projects <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
