Reformat Events page

--- a/event.html
+++ b/event.html
@@ -9,16 +9,17 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title> Events | ICT Lab</title>
+    <title>Events | ICT Lab</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/modern-business.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -64,13 +65,13 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="dropdown">
+                    <li class="dropdown active">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">News and Events <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
                                 <a href="news.html">News</a>
                             </li>
-                            <li>
+                            <li class="active">
                                 <a href="event.html">Events</a>
                             </li>
                         </ul>
@@ -97,12 +98,11 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header"> ICT Lab Seminar
-                </h1>
+                <h1 class="page-header">Events</h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
                     </li>
-                    <li class="active"> ICT Lab Seminar</li>
+                    <li class="active">Events</li>
                 </ol>
             </div>
         </div>
@@ -185,49 +185,14 @@
                 <p>A few pictures of the first ICTLab seminar  on  10/2/2015</p>
             </div>
         </div>
-
-        <!-- Projects Row -->
-        
-
-        <hr>
-
-        <!-- Pagination -->
-        <!-- <div class="row text-center">
-            <div class="col-lg-12">
-                <ul class="pagination">
-                    <li>
-                        <a href="#">&laquo;</a>
-                    </li>
-                    <li class="active">
-                        <a href="#">1</a>
-                    </li>
-                    <li>
-                        <a href="#">2</a>
-                    </li>
-                    <li>
-                        <a href="#">3</a>
-                    </li>
-                    <li>
-                        <a href="#">4</a>
-                    </li>
-                    <li>
-                        <a href="#">5</a>
-                    </li>
-                    <li>
-                        <a href="#">&raquo;</a>
-                    </li>
-                </ul>
-            </div>
-        </div> -->
         <!-- /.row -->
 
-        <hr>
-
         <!-- Footer -->
-        <footer>
+        <footer class="modal-footer">
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <hr>
+                    <p>Copyright &copy; ICTLab</p>
                 </div>
             </div>
         </footer>
